--- a/site/hitta_hit.html
+++ b/site/hitta_hit.html
@@ -10,7 +10,9 @@ title: Hitta hit
        981 39 KIRUNA
     </a>
     </div>
-    <iframe id="map" class="onlyjs" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1503.2561139964444!2d20.231765716861002!3d67.86605788541029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNjfCsDUxJzU3LjgiTiAyMMKwMTQnMDIuMiJF!5e0!3m2!1ssv!2sse!4v1600074009390!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <div class="mapcontainer" style="height: 300px">
+        <iframe id="map" class="onlyjs" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1503.2561139964444!2d20.231765716861002!3d67.86605788541029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNjfCsDUxJzU3LjgiTiAyMMKwMTQnMDIuMiJF!5e0!3m2!1ssv!2sse!4v1600074009390!5m2!1ssv!2sse" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
 </div>
 <div class="container mt-5">
 
